configurando media quearis

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         </div>
 
         <div class="boton-1"><button class="boton1" type="submit" >Get Started</button> <!--Boton de loggin-->
+            <img class="botonMenu" src="./imagenes/icon-hamburger.svg" alt="--menu">
         </div>
         
     </header>
@@ -31,7 +32,7 @@
 
     
     <main> <!--Caja padre principal-->
-        <section class="cajaPadre"> <!--Caja padre No 2-->
+        <section class="cajaPadre padremobile"> <!--Caja padre No 2-->
             <div> <!--primer contenedor CP 2-->
                 <h2>Bring everyone
                     together to build
@@ -49,7 +50,7 @@
             </section>
         </section><!--fin caja padre No 2-->
 
-        <section class="cajaPadre"><!--Caja padre No 3-->
+        <section class="cajaPadre-1"><!--Caja padre No 3-->
             <div><!--primer contenedor CP 3-->
                 <h3 class="tituloC-3">What's different about
                     Manage? 
@@ -60,7 +61,7 @@
             </div>
 
             <div><!--Segundo contenedor CP 3-->
-                <div><!--caja hija del segundo contenedor CP 3-->
+                <div class="versionMobile"><!--caja hija del segundo contenedor CP 3-->
                     <p class="viñetas">01</p>
                     <h3 class="subtituloC-3">Track company-wide progress</h3>
                     <p class="descripcion-3">See how your day-to-day tasks fit into the wider vision. Go from tracking progress at the milestone level all 
@@ -68,7 +69,7 @@
                     </p>
                 </div>
 
-                <div><!--caja hija del segundo contenedor CP 3-->
+                <div class="versionMobile"><!--caja hija del segundo contenedor CP 3-->
                     <p class="viñetas">02</p>
                     <h3 class="subtituloC-3">Advance built-in reports</h3>
                     <p class="descripcion-3">Set internal delivery estimates and track progress toward company goals. 
@@ -76,7 +77,7 @@
                     </p>
                 </div>
 
-                <div><!--caja hija del segundo contenedor CP 3-->
+                <div class="versionMobile"><!--caja hija del segundo contenedor CP 3-->
                     <p class="viñetas">03</p>
                     <h3 class="subtituloC-3">Everything you need in one place</h3>
                     <p class="descripcion-3">Stop jumping from one service to another to communicate, store files, track tasks and share documents. 
